--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,52 @@
 * {
   box-sizing: border-box;
 }
-
-.left {
-  position: fixed;
-  padding: 10px;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 50px;
-  opacity: 50%;
-  background: darkslategray;
-  transition: width ease .5s;
-  /* Sass/Scss only:
-    Using a selector (.open-nav) with an "&" afterward is actually selecting
-  any parent selector. For instance, this outputs "body.open-nav .left { ... }"
-  More info: http://thesassway.com/intermediate/referencing-parent-selectors-using-ampersand
-  */
-}
-body.open-nav .left {
-  width: 250px;
-}
-.left ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-/*  display:none;*/
-}
-.left ul li {
-  margin-bottom: 25px;
-}
-.left a {
-  color: #182828;
-  text-decoration: none;
-  border-bottom: 1px solid transparent;
-  transition: color ease .35s, border-bottom-color ease .35s;
-}
-.left a:hover {
-  color: white;
-  border-bottom-color: white;
-}
-.left a.open {
-  font-size: 1.75rem;
-  font-weight: 700;
-  border: 0;
-}
-
-.right {
-  position: relative;
-  margin-left: 75px;
-  transition: margin-left ease .5s;
-}
-body.open-nav .right {
-  margin-left: 275px;
-}
+body {
+                font-family: Open Sans, Arial, sans-serif;
+                overflow-x: hidden;
+            }
+            
+            nav {
+                position: fixed;
+                z-index: 1000;
+                top: 0;
+                bottom: 0;
+                width: 200px;
+                background-color: #036;
+                transform: translate3d(-200px, 0, 0);
+                transition: transform 0.4s ease;
+            }
+            .active-nav nav {
+                transform: translate3d(0, 0, 0);
+            }
+            nav ul {
+                list-style: none;
+                margin-top: 100px;
+            }
+            nav ul li a {
+                text-decoration: none;
+                display: block;
+                text-align: center;
+                color: #fff;
+                padding: 10px 0;
+            }
+            
+            .nav-toggle-btn {
+                display: block;
+                position: absolute;
+                left: 200px;
+                width: 40px;
+                height: 40px;
+                background-color: #666;
+            }
+            
+            .content {
+                padding-top: 300px;
+                height: 2000px;
+                background-color: #ccf;
+                text-align: center;
+                transition: transform 0.4s ease;
+            }
+            .active-nav .content {
+                transform: translate3d(200px, 0, 0);
+            }
