fixing index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@ body {
                 font-family: Open Sans, Arial, sans-serif;
                 overflow-x: hidden;
             }
+
+            .center {
+            text-align: center;
+            }
             
             nav {
                 position: fixed;
