--- a/css/styles.css
+++ b/css/styles.css
@@ -5,50 +5,84 @@
 .center {
     text-align: center;
 }
+/*MH added content class so it can push when nav bar open*/
+.content {
+    transition: transform 0.4s ease;
+}
+
+.active-nav .content {
+    transform: translate3d(200px, 0, 0);
+}
+/*MH columns*/
+.container2 {
+    padding:50px;
+    clear:left;
+    float:left;
+    width:100%;
+    overflow:hidden;
+}
+.container1 {
+    float:left;
+    width:100%;
+    position:relative;
+    right:50%;
+}
+.col1 {
+    float:left;
+    width:46%;
+    position:relative;
+    left:52%;
+    overflow:hidden;
+}
+.col2 {
+    float:left;
+    width:46%;
+    position:relative;
+    left:56%;
+    overflow:hidden;
+}
+
+/* insert image gallery*/
+
+
 
 body {
-                font-family: Open Sans, Arial, sans-serif;
-                overflow-x: hidden;
-            }
+    font-family: Open Sans, Arial, sans-serif;
+    overflow-x: hidden;
+}
 
+nav {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    bottom: 0;
+    width: 150px;
+    background-color: #666;
+    transform: translate3d(-150px, 0, 0);
+    transition: transform 0.4s ease;
+}
+
+.active-nav nav {
+    transform: translate3d(0, 0, 0);
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav ul li a {
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    color: #fff;
+    padding: 10px 0;
+    }
             
-            
-            nav {
-                position: fixed;
-                z-index: 1000;
-                top: 0;
-                bottom: 0;
-                width: 150px;
-                background-color: #036;
-                transform: translate3d(-150px, 0, 0);
-                transition: transform 0.4s ease;
-            }
-            .active-nav nav {
-                transform: translate3d(0, 0, 0);
-            }
-            nav ul {
-                list-style: none;
-            }
-            nav ul li a {
-                text-decoration: none;
-                display: block;
-                text-align: center;
-                color: #fff;
-                padding: 10px 0;
-            }
-            
-            .nav-toggle-btn {
-                display: block;
-                position: absolute;
-                left: 150px;
-                width: 40px;
-                height: 40px;
-                background-color: #666;
-            }
-            
-            .content {
-                transition: transform 0.4s ease;
-            }
-            .active-nav .content {
-                transform: translate3d(200px, 0, 0);
-            }
+.nav-toggle-btn {
+    display: block;
+    position: absolute;
+    left: 150px;
+    width: 40px;
+    height: 40px;
+    background-color: #666;
+}
