--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+#banner img {
+    border: none;
+    margin: 0 auto;
+    display: block;
+}
+
 .center {
     text-align: center;
 }
