--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,13 @@
     display: block;
 }
 
+.imagebox {
+    border: 1px solid #b3b3b3;
+    background: #dddddd;
+    width: 200px;
+    border-radius: 8px
+}
+
 .center {
     text-align: center;
 }
